--- a/rust-lib/Cargo.toml
+++ b/rust-lib/Cargo.toml
@@ -20,7 +20,7 @@ tree-sitter-cpp = "0.23.4"
 tree-sitter-javascript = "0.23.1" 
 tree-sitter-python = "0.23.6"
 piston_rs = "0.4.3"
-tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1.44.2", features = ["full"] }
 once_cell = "1.21.3"
 
 [build-dependencies]
